# ER_splitting

./: .gitignore  README.md  entity_resolution_splitting.d2  main.py  mkdocs.yml  pyproject.toml  splitting_examples.d2
.cache/plugin/d2/: db.db
docs/: er_pipeline.md  index.md
docs/splitting/: ern_overview.md  ern_senzing_comparison.md
