[project]
name = "er-splitting"
version = "0.1.0"
description = "ER_splitting_documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-d2-plugin>=1.6.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-obsidian-bridge>=1.2.0",
    "mkdocs-panzoom-plugin>=0.2.2",
]


